project/stage/parse_tests/tests/reject/bad_statements/bad_if/var_decl_in_condition.ul
int F() {
    if( void temp; ) { }
}
